--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "init": "^0.1.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1",
+    "nodemailer": "^6.9.0",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
