--- a/config/config.example.json
+++ b/config/config.example.json
@@ -4,6 +4,7 @@
       "password": "password",
       "database": "database",
       "host": "127.0.0.1",
-      "dialect": "mysql"
+      "dialect": "mysql",
+      "jwt_secret": "tripulaciones"
     }
 }
